--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-    --gold: #77f8ff;
+    --gold:  aqua;
     --dark: #f9f7f7;
     --light: #faf7f7;
 }
@@ -26,7 +26,7 @@ body {
     top: 0;
     width: 100%;
     padding: 1.5rem;
-    background: rgba(250, 248, 248, 0.95);
+    background: rgba(255, 255, 255, 0.95);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,7 +36,7 @@ body {
 }
 
 .navbar:hover {
-    box-shadow: 0 4px 15px rgba(24, 19, 19, 0.2);
+    box-shadow: 0 4px 15px rgba(6, 6, 6, 0.2);
 }
 
 .logo {
@@ -48,6 +48,7 @@ body {
 .logo:hover{
     transform: scale(1.02);
     color: var(--gold);
+    box-shadow: cyan ;
 }
 
 .nav-links {
@@ -85,20 +86,18 @@ body {
 .home-image {
     flex: 1;
     text-align: center;
-    position: relative;
 }
 
 .home-image img {
-    width: 400px;
-    height: 400px;
-    object-fit: cover;
-    border: 5px solid rgb(135, 245, 255);
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    max-width: 500px;
+    border-radius: 15px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
 }
 
 .home-image img:hover {
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 
 .social-icons {
